# plasma-runner-appinstall

./: CMakeLists.txt  Messages.sh  README.markdown  appinstall.cpp  appinstall.h  packageset.cpp  packageset.h  plasma-runner-appinstall.desktop
